syntax = "proto3";

package base;

message PlacedItemEntity {
    string id = 1; // AbstractEntity ID
  
    int32 x = 2;
    int32 y = 3;
    
    string user_id = 4; // userId mapped to the string field
    UserSchema user = 5; // Nested message UserSchema
    
    string item_key = 6; // Optional, nullable itemKey
    string inventory_key = 7; // Optional, nullable inventoryKey
    
    string type = 8;
    
    SeedGrowthInfo seed_growth_infos = 9; // Optional, nullable SeedGrowthInfo
    AnimalInfo animal_infos = 10; // Optional, nullable AnimalInfo
    BuildingInfo building_infos = 11; // Optional, nullable BuildingInfo
    
    string parent_placed_item_key = 12; // Optional, nullable parentPlacedItemKey
}
  
// You need to define your other related entities/messages
message UserSchema {
    string id = 1;
    string name = 2; // Add any other fields related to UserSchema
}

message SeedGrowthInfo {
    // Add appropriate fields based on the TypeScript model
    string growth_stage = 1;
    int32 growth_progress = 2;
    // etc.
}
  
  // Example for AnimalInfo:
message AnimalInfo {
    string animal_type = 1;
    int32 health = 2;
    // etc.
}
  
  // Example for BuildingInfo:
message BuildingInfo {
    string building_type = 1;
    int32 level = 2;
    // etc.
}

message Inventory {
    string id = 1;         
    string reference_key = 2; 
    int32 quantity = 3;    
    string type = 4; 
    bool placeable = 5;     
    bool is_placed = 6;      
    bool premium = 7;      
    bool deliverable = 8;   
    bool asTool = 9;        
    int32 max_stack = 10;   
    string token_id = 11;
    string user_id = 12; 
}